--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
 }
 
 .button {
+  width: fit-content;
   margin-bottom: 10px;
   padding: 10px 30px;
   border-radius: 5px;
@@ -96,4 +97,15 @@ body {
   font-weight: 800;
   line-height: 40px;
   color: rgb(72, 126, 176);
+}
+
+.wrong-validation {
+  width: fit-content;
+  padding: 5px 10px;
+  background: red;
+  border-radius: 5px;
+  color:#FFFFFF;
+  font-size: 10px;
+  font-weight: 800;
+  letter-spacing: .5px;
 }
